fix: center home btn on mobile

--- a/src/styles/components/hero/HomeHero.module.scss
+++ b/src/styles/components/hero/HomeHero.module.scss
@@ -49,6 +49,15 @@
       }
     }
 
+    &-btn {
+      opacity: 0;
+      transform: translateX(-100%);
+
+      @include laptop {
+        margin: auto;
+      }
+    }
+
     &--gallery {
       position: relative;
       overflow: hidden;
@@ -192,7 +201,7 @@
       }
 
       @include phone {
-        font-size: 4.5rem;
+        font-size: 4.3rem;
       }
     }
   }
